--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@ body {
 }
 
 button {
-  @apply bg-[#464849] py-2 px-2 rounded-md border border-[#5F5F5F]/50 shadow-sm cursor-pointer hover:bg-[#3C3D3D] transition-colors active:translate-y-1;
+  @apply py-2 px-2 rounded-md border shadow-sm cursor-pointer transition-colors active:translate-y-1;
 }
 
 .login-form {
